--- a/.platform.yml
+++ b/.platform.yml
@@ -1,6 +1,6 @@
 php_settings:
   version: 7.3
   http:
-     gc_maxlifetime: "7200"
+     'session.gc_maxlifetime': "7200"
   cli:
-     gc_maxlifetime: "7200"
+     'session.gc_maxlifetime': "7200"
